chore: New Crowdin updates (#2977)

--- a/apps/wallet-mobile/src/i18n/locales/fr-FR.json
+++ b/apps/wallet-mobile/src/i18n/locales/fr-FR.json
@@ -246,6 +246,7 @@
   "components.send.confirmscreen.confirmButton": "Confirmer",
   "components.send.confirmscreen.fees": "Frais",
   "components.send.confirmscreen.noActiveCollateral": "You don't have an active collateral utxo",
+  "components.send.confirmscreen.collateralTxPending": "Collateral transaction is pending. Try again later",
   "components.send.confirmscreen.password": "Mot de passe de paiement",
   "components.send.confirmscreen.receiver": "Receiver address, ADA Handle or domains",
   "components.send.confirmscreen.sendingModalTitle": "Soumission de la transaction",
@@ -288,7 +289,8 @@
   "components.send.sendscreen.feeNotAvailable": "-",
   "components.send.sendscreen.receiver": "Receiver",
   "components.send.sendscreen.resolvedAddress": "Resolved address",
-  "components.send.sendscreen.resolverNoticeTitle": "Yoroi Supports",
+  "components.send.sendscreen.resolverNoticeTitle": "Yoroi supports more addresses",
+  "components.send.sendscreen.resolverNoticeText": "Yoroi offers a unique chance to use custom and lightning-fast alternatives to the traditional wallet address, such as",
   "components.send.sendscreen.searchTokens": "Rechercher des jetons",
   "components.send.sendscreen.sendAllWarningAlert1": "Tout votre solde de {assetNameOrId} sera transféré dans cette transaction.",
   "components.send.sendscreen.sendAllWarningAlert2": "Tous vos tokens, y compris les NFT et tout autre actif natif de votre portefeuille, seront également transférés dans cette transaction.",
@@ -607,6 +609,7 @@
   "global.actions.dialogs.walletSynchronizing": "Votre portefeuille est en cours de synchronisation ",
   "global.actions.dialogs.wrongPinError.message": "Le code PIN est incorrect.",
   "global.actions.dialogs.wrongPinError.title": "Code PIN invalide",
+  "global.actions.dialogs.insufficientCollateral.message": "Collateral amount is insufficient. Please go back and assign collateral.",
   "global.all": "Tous",
   "global.apply": "Apply",
   "global.assets.assetLabel": "actif",
@@ -765,11 +768,10 @@
   "scan.linksErrorUnsupportedVersion.help": "The link authority version is not yet supported by the app'",
   "scan.linksErrorUnsupportedVersion.title": "Unsupported version",
   "scan.title": "Scan the QR code",
-  "send.helper.addressError.invalid": "Please enter a valid address",
+  "send.helper.addressError.invalid": "Please enter a valid receiver address, ADA Handle or domain",
   "send.helper.addressError.wrongNetwork": "Please enter an address for the current wallet network",
   "send.helper.resolver.resolvedAddress": "Resolved address",
-  "send.helper.resolverError.unsupportedDomain": "Please enter a supported domain",
-  "send.helper.resolverError.domainNotFound": "Domain not found (check the supported versions)",
+  "send.helper.resolverError.domainNotFound": "Receiver address, ADA Handle or domain you entered doesn't exist. Please double-check it and try again",
   "send.warning.resolver.manyNameServers": "There are more than one address for this domain. Please choose the desired name server.",
   "swap.listOrders.card.buttonText": "Annuler la commande.",
   "swap.listOrders.completed": "Ordres complétés",
