--- a/apps/wallet-mobile/src/i18n/locales/de-DE.json
+++ b/apps/wallet-mobile/src/i18n/locales/de-DE.json
@@ -246,6 +246,7 @@
   "components.send.confirmscreen.confirmButton": "Bestätigen",
   "components.send.confirmscreen.fees": "Gebühren",
   "components.send.confirmscreen.noActiveCollateral": "You don't have an active collateral utxo",
+  "components.send.confirmscreen.collateralTxPending": "Collateral transaction is pending. Try again later",
   "components.send.confirmscreen.password": "Ausgabekennwort",
   "components.send.confirmscreen.receiver": "Receiver address, ADA Handle or domains",
   "components.send.confirmscreen.sendingModalTitle": "Überweisung versenden",
@@ -288,7 +289,8 @@
   "components.send.sendscreen.feeNotAvailable": "-",
   "components.send.sendscreen.receiver": "Receiver",
   "components.send.sendscreen.resolvedAddress": "Resolved address",
-  "components.send.sendscreen.resolverNoticeTitle": "Yoroi Supports",
+  "components.send.sendscreen.resolverNoticeTitle": "Yoroi supports more addresses",
+  "components.send.sendscreen.resolverNoticeText": "Yoroi offers a unique chance to use custom and lightning-fast alternatives to the traditional wallet address, such as",
   "components.send.sendscreen.searchTokens": "Search assets",
   "components.send.sendscreen.sendAllWarningAlert1": "Deine gesamte {assetNameOrId} Balance wird in dieser Transaktion übertragen.",
   "components.send.sendscreen.sendAllWarningAlert2": "Alle deine Token, inklusive NFTs und jeglicher anderer nativen Assets in deiner Wallet werden ebenfalls in dieser Transaktion übertragen.",
@@ -607,6 +609,7 @@
   "global.actions.dialogs.walletSynchronizing": "Die Wallet wird synchronisiert",
   "global.actions.dialogs.wrongPinError.message": "Ungültige PIN.",
   "global.actions.dialogs.wrongPinError.title": "Ungültige PIN",
+  "global.actions.dialogs.insufficientCollateral.message": "Collateral amount is insufficient. Please go back and assign collateral.",
   "global.all": "All",
   "global.apply": "Apply",
   "global.assets.assetLabel": "Asset",
@@ -765,11 +768,10 @@
   "scan.linksErrorUnsupportedVersion.help": "The link authority version is not yet supported by the app'",
   "scan.linksErrorUnsupportedVersion.title": "Unsupported version",
   "scan.title": "Scan the QR code",
-  "send.helper.addressError.invalid": "Please enter a valid address",
+  "send.helper.addressError.invalid": "Please enter a valid receiver address, ADA Handle or domain",
   "send.helper.addressError.wrongNetwork": "Please enter an address for the current wallet network",
   "send.helper.resolver.resolvedAddress": "Resolved address",
-  "send.helper.resolverError.unsupportedDomain": "Please enter a supported domain",
-  "send.helper.resolverError.domainNotFound": "Domain not found (check the supported versions)",
+  "send.helper.resolverError.domainNotFound": "Receiver address, ADA Handle or domain you entered doesn't exist. Please double-check it and try again",
   "send.warning.resolver.manyNameServers": "There are more than one address for this domain. Please choose the desired name server.",
   "swap.listOrders.card.buttonText": "Cancel order",
   "swap.listOrders.completed": "completed orders",
