--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -246,7 +246,8 @@
   "components.send.confirmscreen.confirmButton": "Confirm",
   "components.send.confirmscreen.fees": "Fees",
   "components.send.confirmscreen.noActiveCollateral": "To continue with this action, you need to generate a collateral",
-  "components.send.confirmscreen.collateralTxPending": "Collateral transaction is pending. Try again later",
+  "components.send.confirmscreen.collateralTxPendingTitle": "Pending Collateral UTxO",
+  "components.send.confirmscreen.collateralTxPending": "The collateral UTxO transaction you've submitted is currently in the processing stage, and it may require a few minutes to complete. Please refresh your interface and attempt the action again shortly",
   "components.send.confirmscreen.password": "Spending password",
   "components.send.confirmscreen.receiver": "Receiver address, ADA Handle or domains",
   "components.send.confirmscreen.sendingModalTitle": "Submitting transaction",
