--- a/apps/wallet-mobile/src/i18n/locales/fil-PH.json
+++ b/apps/wallet-mobile/src/i18n/locales/fil-PH.json
@@ -239,14 +239,15 @@
   "components.send.biometricauthscreen.UNKNOWN_ERROR": "Something went wrong, try again later. Check your app settings.",
   "components.send.biometricauthscreen.useFallbackButton": "Use other login method",
   "components.send.confirmscreen.amount": "Amount",
-  "components.send.confirmscreen.assignCollateral": "Assign collateral",
+  "components.send.confirmscreen.assignCollateral": "Generate",
   "components.send.confirmscreen.balanceAfterTx": "Balance after transaction",
   "components.send.confirmscreen.beforeConfirm": "Before tapping on confirm, please follow these instructions:",
   "components.send.confirmscreen.collateralNotFound": "Collateral not found",
   "components.send.confirmscreen.confirmButton": "Confirm",
   "components.send.confirmscreen.fees": "Fees",
-  "components.send.confirmscreen.noActiveCollateral": "You don't have an active collateral utxo",
-  "components.send.confirmscreen.collateralTxPending": "Collateral transaction is pending. Try again later",
+  "components.send.confirmscreen.noActiveCollateral": "To continue with this action, you need to generate a collateral",
+  "components.send.confirmscreen.collateralTxPendingTitle": "Pending Collateral UTxO",
+  "components.send.confirmscreen.collateralTxPending": "The collateral UTxO transaction you've submitted is currently in the processing stage, and it may require a few minutes to complete. Please refresh your interface and attempt the action again shortly",
   "components.send.confirmscreen.password": "Spending password",
   "components.send.confirmscreen.receiver": "Receiver address, ADA Handle or domains",
   "components.send.confirmscreen.sendingModalTitle": "Submitting transaction",
@@ -829,6 +830,7 @@
   "swap.swapScreen.ordersSwapTab": "Orders",
   "swap.swapScreen.priceImpact": "Price Impact",
   "swap.swapScreen.priceImpactInfo": "Price impact is a difference between the actual market price and your price due to trade size.",
+  "swap.swapScreen.backToSwapOrders": "Back to swap orders",
   "swap.swapScreen.priceImpactRiskHigh": "Price impact over {riskValue}%",
   "swap.swapScreen.priceImpactDescription": "may cause a significant loss of funds. Please bear this in mind and proceed with an extra caution.",
   "swap.swapScreen.poolFee": "DEX Fee",
